# didactics

./: .gitignore  README.md
data-mining/: README.md  main.tex  pyproject.toml
data-mining/data/: taiwan_credit.csv
data-mining/lecture_1/: 01_eda_missingness.ipynb  block1.tex  finance_data.py  make_figures.py
data-mining/lecture_2/: 02_regression_baselines.ipynb  block2.tex  make_figures.py
data-mining/lecture_3/: 03_trees_ensembles_evaluation.ipynb  block3.tex  make_figures.py
data-mining/lecture_4/: 04_clustering_pca.ipynb  block4.tex  make_figures.py
data-mining/lecture_5/: 05_pattern_mining_text.ipynb  block5.tex  make_figures.py
data-mining/lecture_6/: 06_neural_networks.ipynb  block6.tex  make_figures.py
data-mining/prerequisites/: 00_python_primer.ipynb
data-mining/project/: project_template.ipynb
